--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "alasql": "^0.3.2",
     "argparse": "^1.0.7",
+    "elasticsearch": "^11.0.1",
+    "elasticsearch-csv": "0.0.3",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.2",
     "underscore": "^1.8.3"
