--- a/package.json
+++ b/package.json
@@ -15,8 +15,15 @@
   "dependencies": {
     "alasql": "^0.3.2",
     "argparse": "^1.0.7",
+    "async": "^2.1.2",
+    "azure-storage": "^1.3.2",
+    "bluebird": "^3.4.6",
+    "decompress": "^4.0.0",
+    "decompress-targz": "^4.0.0",
     "elasticsearch": "^11.0.1",
     "elasticsearch-csv": "0.0.3",
+    "es": "^0.5.2",
+    "line-by-line": "^0.1.5",
     "mongodb": "^2.2.10",
     "mongoose": "^4.6.2",
     "underscore": "^1.8.3"
