--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "es": "^0.5.2",
     "exec": "^0.2.1",
     "line-by-line": "^0.1.5",
+    "moment": "^2.17.1",
     "rmdir": "^1.2.0",
     "underscore": "^1.8.3"
   }
